Update N3L9. Recorrido de Diccionarios (Solución).md

--- a/N3L9. Recorrido de Diccionarios (Solución).md
+++ b/N3L9. Recorrido de Diccionarios (Solución).md
@@ -1,3 +1,31 @@
+### NIVEL 3. LECCIÓN 9. RECORRIDO DE DICIONARIOS
+
+**¿Por qué necesitamos recorrer la información de un diccionario?** En el momento en que se requiere procesar la información que se encuentra almacenada en un diccionario se hace necesario recorrerlo.
+
+**¿Cómo podemos recorrer la información de un diccionario?** Hay dos formas de recorrer un diccionario: **recorriendo las llaves** o **recorriendo los valores**. Dependiendo de la naturaleza del problema es posible determinar cuál de las formas de recorrido usar.
+
+Considere el siguiente directorio de teléfonos representado por un diccionario.
+
+```python
+directorio = {
+    "Juan": "300 235 87 45",
+    "Luis": "311 986 47 00",
+    "Ana": “320 700 62 15",
+    "María": “312 958 88 50",
+}
+```
+El **recorrido por las llaves**, es llevado a cabo por la instrucción `for-in`, recorre únicamente las llaves del diccionario como se muestra en el siguiente ejemplo
+
+EJEMPLO:
 ```python 
-def hola_mundo
+for cada_elemento in directorio:
+    print(cada_elemento)
+```
+
+SALIDA:
+```python 
+Juan
+Luis
+Ana
+Maria
 ```
