Update N3L9. Recorrido de Diccionarios (Solución).md

--- a/N3L9. Recorrido de Diccionarios (Solución).md
+++ b/N3L9. Recorrido de Diccionarios (Solución).md
@@ -16,16 +16,55 @@ directorio = {
 ```
 El **recorrido por las llaves**, es llevado a cabo por la instrucción `for-in`, recorre únicamente las llaves del diccionario como se muestra en el siguiente ejemplo
 
-EJEMPLO:
+**Ejemplo 1**
 ```python 
 for cada_elemento in directorio:
     print(cada_elemento)
 ```
 
-SALIDA:
+*Salida*
 ```python 
 Juan
 Luis
 Ana
 Maria
 ```
+
+**Ejemplo 2**
+```python 
+for cada_elemento in directorio.keys():
+    print(cada_elemento, ”->”, directorio[cada_elemento])
+```
+
+*Salida*
+```python 
+Juan -> 300 235 87 45
+Luis -> 311 986 47 00
+Ana -> 320 700 62 15
+Maria -> 312 958 88 50
+```
+
+**¿Qué dudas o preguntas tengo sobre lo que leí en la introducción?**
+
+<br><br>
+
+### ENUNCIADO 1 (Tienda) - Diccionarios como Estructura de Datos Simples
+
+Pablo tiene una tienda de frutas y vende tres tipos de frutas; manzanas, peras y fresas. Una manzana tiene un valor de $50, cada pera tiene un valor de $60 y cada fresa tiene un valor de $20. Pablo hace el registro de sus ventas en una base de datos llamada ventas representada por un diccionario en Python. De la misma manera, Pablo mantiene el precio de cada producto en otra base de datos llamada precios, como se muestra a continuación.
+
+**Base de datos**
+```python
+ventas = {
+    “manzana”: 55,
+    “pera”: 85,
+    “fresa”: 130,
+}
+
+precios = {
+    “manzana”: 500,
+    “pera”: 600,
+    “fresa”: 200,
+}
+```
+
+Punto 1. ¿Liste los productos que Pablo tiene disponible en su base de datos de ventas? No es necesario usar código Python.
